--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,98 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    line-height: 1.42;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.42;
 }
 
-ul, li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
-h1, h2, h3 {
-    margin: 0;
+h1,
+h2,
+h3 {
+  margin: 0;
 }
 
 .wrapper {
-    min-height: 100%;
-    overflow: hidden;
+  min-height: 100%;
+  overflow: hidden;
 }
 
+.header {
+  padding: 30px 0px;
+}
 .container {
-    max-width: 855%;
+  max-width: 865%;
+  padding: 0px 5px;
+  margin: 0 auto;
+}
+
+.header__container {
+  max-width: 1032px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav__list {
+  display: flex;
+}
+
+.nav__item {
+  margin-left: 33px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 44px;
+  line-height: 136%;
+}
+
+.about__container {
+  display: flex;
+}
+
+.about__desc {
+  margin: 40px 0px;
+}
+
+.about__info {
+  padding-right: 13.5%;
+}
+.about__avatar {
+  width: 243px;
+  height: 243px;
+  border-radius: 50%;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+.about__img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
