--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,37 @@ h3 {
   width: 100%;
   object-fit: cover;
 }
+
+
+.recent__post {
+  background: #EDF7FA;
+  padding: 27px 0px 32px;
+}
+
+.recent-posts__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 22px;
+}
+
+.recent-posts__articles {
+display: flex;
+}
+
+.recent-posts__article {
+  background: #ffffff;
+  box-shadow: 0px 4px 10px rgba(187, 264, 48, alpha);
+  border-radius: 4px;
+  width: 49%;
+  margin-right: 2%;
+  padding: 24px 21px 28px 23px;
+}
+
+.recent-posts__article:last-child {
+  margin-right: 0;
+}
+
+.recent-posts__separator {
+  
+}
